# vlt3d

./: .gitignore  CMakeLists.txt  README.md  build.py  clion-config.xml  compile  vk_layer_settings.txt
assets/: font.json  font.tt
assets/shaders/: frag_compose.glsl  frag_mix.glsl  frag_ssao.glsl  frag_terrain.glsl  frag_tint.glsl  vert_2d.glsl  vert_3d.glsl  vert_blit.glsl  vert_compose.glsl  vert_occlude.glsl  vert_terrain.glsl
demo/main/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  git-sync-deps  implementation.cpp  vk_mem_alloc.cpp
lib/glad/: gl.h  glad.c  glad.h  vulkan.h
lib/glfw/: VERSION.txt
src/: camera.cpp  camera.hpp  context.hpp  core.hpp  external.cpp  external.hpp  glhelper.cpp  glhelper.hpp  glph.hpp  input.cpp  input.hpp  macro.hpp  main.cpp  system.hpp  test.cpp  window.cpp  window.hpp  world.hpp
src/buffer/: allocator.cpp  allocator.hpp  array.cpp  array.hpp  atlas.cpp  atlas.hpp  buffer.cpp  buffer.hpp  font.cpp  font.hpp  image.cpp  image.hpp  memory.hpp  patch.cpp  patch.hpp  query.cpp  query.hpp  sprites.cpp  sprites.hpp
src/client/: alignment.hpp  camera.cpp  camera.hpp  frustum.cpp  frustum.hpp  immediate.cpp  immediate.hpp  object.cpp  object.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  vertices.hpp
src/client/gui/: screen.cpp  screen.hpp  stack.cpp  stack.hpp
src/client/gui/component/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  component.cpp  component.hpp  composed.cpp  composed.hpp  image.cpp  image.hpp  line.cpp  line.hpp  spacer.cpp  spacer.hpp  text.cpp  text.hpp
src/client/gui/grid/: chain.cpp  chain.hpp  context.cpp  context.hpp  inset.cpp  inset.hpp  navigator.cpp  navigator.hpp
src/client/gui/screen/: grid.cpp  grid.hpp  group.cpp  group.hpp  pause.cpp  pause.hpp  play.cpp  play.hpp  test.cpp  test.hpp
src/command/: buffer.hpp  pool.hpp  recorder.hpp  submiter.hpp
src/descriptor/: descriptor.cpp  descriptor.hpp  layout.cpp  layout.hpp  pool.cpp  pool.hpp  push.cpp  push.hpp
src/include/: external.hpp
src/render/: attachment.cpp  attachment.hpp  binding.hpp  framebuffer.hpp  image.hpp  pass.hpp  pipeline.hpp  renderpass.hpp  view.hpp
src/setup/: callback.cpp  callback.hpp  debug.cpp  debug.hpp  device.hpp  features.hpp  instance.hpp  messanger.cpp  messanger.hpp  picker.hpp  present.hpp  proxy.cpp  proxy.hpp  queues.hpp  result.hpp  surface.hpp  swapchain.hpp
src/shader/: compiler.hpp  kind.cpp  kind.hpp  module.hpp
src/sound/: buffer.hpp  debug.hpp  group.hpp  listener.hpp  source.hpp  system.hpp  volume.hpp
src/sync/: fence.hpp  semaphore.hpp
src/util/: arena.hpp  array.hpp  bits.hpp  box.cpp  color.cpp  color.hpp  direction.cpp  direction.hpp  exception.cpp  exception.hpp  format.hpp  inline.hpp  logger.cpp  logger.hpp  pyramid.hpp  ring.hpp  threads.cpp  threads.hpp  timer.cpp  timer.hpp  trait.hpp  util.hpp  voronoi.hpp
src/util/collection/: array.hpp  pyramid.hpp
src/util/math/: approx.hpp  bits.hpp  random.cpp  random.hpp
src/util/thread/: delegator.cpp  delegator.hpp  pool.cpp  pool.hpp  queue.cpp  queue.hpp  task.cpp  task.hpp
src/util/type/: box.hpp  direction.cpp  direction.hpp
src/window/: event.cpp  event.hpp  input.cpp  input.hpp  platform.cpp  platform.hpp  profiler.cpp  profiler.hpp  system.hpp  window.cpp  window.hpp
src/world/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  column.cpp  column.hpp  generator.cpp  generator.hpp  mesher.cpp  mesher.hpp  raycast.cpp  raycast.hpp  renderer.cpp  renderer.hpp  skybox.cpp  skybox.hpp  view.cpp  view.hpp  world.cpp  world.hpp
src/world/render/: emitter.cpp  emitter.hpp  mesher.cpp  mesher.hpp  pool.cpp  pool.hpp  renderer.cpp  renderer.hpp  view.cpp  view.hpp
test/main/: CMakeLists.txt  context.hpp  main.cpp
